--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "eslint": "latest",
     "nuxt": "^3.0.0-rc.11",
     "typescript": "latest"
+  },
+  "dependencies": {
+    "nanoid": "^4.0.0"
   }
 }
